updated my bash script to run my program, readme